test/sema/unsatisfied-generic-constraint.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

interface Fooable {
    func foo()
}

struct F {
    func foo() -> int { return 1 }
}

func main() {
    let f: F = uninitialized;

    // CHECK: 15:8: error: type 'F' doesn't implement interface 'Fooable'
    bar(f);
}

func bar<T: Fooable>(t: T) {
    t.foo()
}
